<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/event_page" 
    android:layout_width="match_parent"  
    android:layout_height="match_parent"
    android:background="@color/aggie_blue_20"
    
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.shronas.rssconference.Contact$PlaceholderFragment">
      
    <FrameLayout
        android:id="@+id/map_frame"
        android:layout_width="match_parent"             
        android:layout_height="175dp"
        android:layout_centerHorizontal="true" 
        android:layout_marginBottom="10dp">
		<ImageView
		    android:id="@+id/map_image"
		    android:layout_width="match_parent" 		        
		    android:layout_height="match_parent"
		    android:contentDescription="@string/contentDesc"
		    android:scaleType="centerCrop" />
		
		<!-- android:src="@drawable/map2"  -->
		
		<TextView
		    android:id="@+id/map_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/click_for_map"
        android:layout_gravity="bottom|left"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_marginLeft="3dp"
        android:layout_marginBottom="3dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:clickable="true"
        android:onClick="openMap" />
		 
    <TextView
        android:id="@+id/directions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-thin"
        android:text="@string/click_for_directions"
        android:layout_gravity="bottom|right"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:textStyle="italic"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="3dp"
        android:paddingLeft="5dp"
        android:paddingTop="5dp"
        android:clickable="true"        
        android:onClick="openDirections" /> 
		</FrameLayout>
        
    <LinearLayout
        android:id="@+id/event_name_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/map_frame"
        android:layout_marginBottom="10dp">
        
        <TextView
            android:id="@+id/event_name_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/event_default"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/event_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:fontFamily="sans-serif-thin"
            android:paddingLeft="5dp"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="20sp" />
  
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/event_time_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/event_name_row"
        android:layout_marginBottom="10dp">
        
        <TextView
            android:id="@+id/event_time_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/event_time_default"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/event_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:fontFamily="sans-serif-thin"
            android:paddingLeft="5dp"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="20sp" />  
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/event_location_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/event_time_row"
        android:layout_marginBottom="10dp">
        
        <TextView
            android:id="@+id/event_location_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/event_loc_default"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/event_location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:paddingLeft="5dp"
            android:gravity="left"
            android:fontFamily="sans-serif-thin"
            android:textColor="@color/black"
            android:textSize="20sp" />  		            
    </LinearLayout>    
    
    <LinearLayout
        android:id="@+id/event_details_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/event_location_row">
        
        <TextView
            android:id="@+id/event_details_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:text="@string/event_details_default"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ScrollView
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollbarAlwaysDrawVerticalTrack="true">
        <TextView
            android:id="@+id/event_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:paddingLeft="5dp"
            android:gravity="left"
            android:textColor="@color/black"
            android:textSize="20sp" /> 
        </ScrollView> 
    </LinearLayout>        
</RelativeLayout>